--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.0.4",
     "@types/three": "^0.174.0",
     "react": "^19.0.0",
